--- a/webdataconnector/Examples/html/JCDecaux.html
+++ b/webdataconnector/Examples/html/JCDecaux.html
@@ -15,7 +15,13 @@
     <div class="container container-table">
         <div class="row vertical-center-row">
             <div class="text-center col-md-4 col-md-offset-4">
-                <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get JCDecaux Data!</button>
+                <form role="form" id="tickerForm" class="form-inline" autocomplete="off"> 
+                    <div class="form-group">
+                        <label for "apikey" style = "margin: 10px;">Enter your <a href="https://developer.jcdecaux.com">JCDecaux API Key</a></label>
+                        <input type="text" id="apikey" class="form-control" placeholder="API key">
+                    </div>
+                    <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get JCDecaux Data!</button>
+                </form>
             </div>
         </div>
     </div>
